# losb-back

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build_backend_image.yml  bump_version.yml  infra_deploy.yml
app/: .env.sample  cities.csv
app/app/: settings.py  urls.py
app/losb/: admin.py  apps.py  models.py  schema.py
app/losb/api/: urls.py
app/losb/migrations/: 0001_initial.py  0001_squashed_0023_rename_avatar_user_avatar_url.py  0002_remove_user_last_login_remove_user_last_loginnn.py  0003_alter_phone_phone.py  0004_user_city_alter_user_phone.py  0005_alter_user_bday.py  0006_alter_user_password.py  0007_alter_user_password.py  0008_alter_user_bday.py  0009_alter_user_bday.py  0010_alter_user_bday.py  0011_alter_user_bday.py  0012_alter_user_bday.py  0013_alter_user_bday.py  0014_phone_vc_created_at_phone_verification_code.py  0015_verificationcode_remove_phone_vc_created_at_and_more.py  0016_smsverification_remove_user_verification_code_and_more.py  0017_alter_user_phone_alter_user_sms_verification.py  0018_alter_smsverification_attempts.py  0019_alter_phone_code_alter_phone_phone.py  0020_rename_phone_phone_number_and_more.py  0021_alter_user_sms_verification.py  0022_rename_bday_user_birthday_rename_city_user_location.py  0023_rename_avatar_user_avatar_url.py  0024_rename_name_user_full_name_alter_smsverification_otp.py  0025_alter_city_options_alter_phone_code_and_more.py  (+1 more)
src/: manage.py
src/losb/: asgi.py  settings.py  urls.py  wsgi.py
src/userprofile/: models.py
tasks/: config.py  docker.py
(+13 files in other folders)
